--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,10 +7,10 @@ node {
         stage('Install node modules'){
                 sh "npm install"
         }
-        //stage('Build'){
-          //      sh "npm run build:ssr"
-        //}
-        //stage('Deploy'){
-          //      sh "pm2 restart all"
-        //}
+        stage('Build'){
+                sh "npm run build:ssr"
+        }
+        stage('Deploy'){
+                sh "pm2 restart all"
+        }
 }
