--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,6 +11,6 @@ node {
                 sh "npm run build:ssr"
         }
         stage('Deploy'){
-                sh "pm2 restart all"
+                sh "pm2 restart all --update-env"
         }
 }
